src/index.sass
@charset "utf-8"

@import url('https://fonts.googleapis.com/css?family=Nunito:400,700')

$primary: #2d2d30
$family-sans-serif: "Nunito", sans-serif;

$control-border-width: 2px
$input-border-color: transparent
$input-shadow: none

body
  margin: 0
  font-family: 'FuraCode Nerd Font', 'Sukhumvit Set', sans-serif
  overflow: hidden
  color: #fff
  background: #121212

*
  box-sizing: border-box

